remove scrollbar from synonyms in legend. Fixes #267

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -402,7 +402,6 @@ div.node, div.legend {
   &.syn {
     @include node-border($dark-blue);
     text-align: left;
-    overflow-y: scroll;
     max-height: 150px;
   }
 
@@ -458,6 +457,12 @@ div.node, div.legend {
     display: table-cell;
     vertical-align: middle;
 
+  }
+}
+
+div.node{
+  &.syn{
+    overflow-y: scroll;
   }
 }
 
